--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,8 +17,11 @@
         <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/register">Register</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!isLoggedIn" class="nav-item">
           <a class="nav-link" href="#" routerLink="/login">Login</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a class="nav-link" href="#" (click)="onLogOutClick()">Logout</a>
         </li>
       </ul>
     </div>
