--- a/src/app/components/edit-client/edit-client.component.html
+++ b/src/app/components/edit-client/edit-client.component.html
@@ -97,7 +97,7 @@
           [(ngModel)]="client.balance" 
           name="balance" 
           #clientBalance="ngModel" 
-          [disabled]="disableBalanceOnAdd"
+          [disabled]="disableBalanceOnEdit"
           />
         </div>
         <input type="submit" class="btn btn-primary btn-block" value="Update" >
