--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,11 +14,17 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
-        <li *ngIf="!isLoggedIn" class="nav-item">
+        <li *ngIf="!isLoggedIn && showRegister" class="nav-item">
           <a class="nav-link" href="#" routerLink="/register">Register</a>
         </li>
-        <li *ngIf="!isLoggedIn" class="nav-item">
+        <li *ngIf="!isLoggedIn && showRegister" class="nav-item">
           <a class="nav-link" href="#" routerLink="/login">Login</a>
+        </li>
+        <li *ngIf="!isLoggedIn && showRegister" class="nav-item">
+          <a class="nav-link" href="#" routerLink="/login">{{loggedInUser}}</a>
+        </li>
+        <li *ngIf="isLoggedIn" class="nav-item">
+          <a class="nav-link" href="#" routerLink="/settings">Settings</a>
         </li>
         <li *ngIf="isLoggedIn" class="nav-item">
           <a class="nav-link" href="#" (click)="onLogOutClick()">Logout</a>
