--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -13,7 +13,7 @@
     Edit Settings
   </h3>
 
-  <div class="card-block">
+  <div class="card-block" *ngIf="settings">
     <form (submit)="onSubmit()">
        <div class="form-group">
         <label for="">AllowRegistration</label>
